feat: MemberChallenge 조회 시 status, totalCalculated 정보 추가